tests222/tests2/test302.out
lli: <stdin>:1:1: error: expected top-level entity
line 5: type mismatch
^
